# Piorsec

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  setup.ps1  setup.sh
src/piorsec/: __init__.py  main.py
src/piorsec/client/: __init__.py  audio_output.py  decoder.py  display.py  gui.py  input_sender.py  receiver.py
src/piorsec/gui/: __init__.py  launcher.py
src/piorsec/host/: __init__.py  audio.py  capture.py  encoder.py  input_receiver.py  sender.py
src/piorsec/shared/: __init__.py  config.py  mock.py  protocol.py  stats.py
