[project]
name = "piorsec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FelipeCamarano", email = "felipecamarano@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "av>=17.0.0",
    "mss>=10.1.0",
    "numpy>=2.4.4",
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "pyside6>=6.11.0",
    "vgamepad>=0.1.0",
]

[project.scripts]
piorsec = "piorsec.main:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
